--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <script src="employees-json.js"></script>
-    <script src="Lab-day2.js"></script>
+    <script src="./dist/bundle.js"></script>
+    
 
     <title>Lab document</title>
 </head>
